First line of about was overlapping with navbar, fixed that using responsiveness properties

--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,11 @@ html{
     padding-bottom: 100px;
   }
 }
+@media (max-width: 414px) {
+  .about{
+    padding-top: 100px;
+  }
+}
 /* ================work exp======== */
 .work{
   width: 100%;
